// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 1 with dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="house-gov-link-link"
            href="https://uscode.house.gov/"
            rel="noopener noreferrer"
            target="_blank"
          >
            House.gov
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="house-gov-link-subtitle-0"
        >
          effective Aug 2023
        </div>
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="house-gov-link-link"
          href="https://uscode.house.gov/"
          rel="noopener noreferrer"
          target="_blank"
        >
          House.gov
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="house-gov-link-subtitle-0"
      >
        effective Aug 2023
      </div>
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 1 without dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="house-gov-link-link"
            href="https://uscode.house.gov/"
            rel="noopener noreferrer"
            target="_blank"
          >
            House.gov
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="house-gov-link-subtitle-0"
        />
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="house-gov-link-link"
          href="https://uscode.house.gov/"
          rel="noopener noreferrer"
          target="_blank"
        >
          House.gov
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="house-gov-link-subtitle-0"
      />
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 2 with dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="statute-compilation-link-link"
            href="https://www.govinfo.gov/app/collection/comps/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Statute Compilation
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="statute-compilation-link-subtitle-0"
        >
          effective Aug 2023
        </div>
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="statute-compilation-link-link"
          href="https://www.govinfo.gov/app/collection/comps/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Statute Compilation
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="statute-compilation-link-subtitle-0"
      >
        effective Aug 2023
      </div>
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 2 without dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="statute-compilation-link-link"
            href="https://www.govinfo.gov/app/collection/comps/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Statute Compilation
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="statute-compilation-link-subtitle-0"
        />
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="statute-compilation-link-link"
          href="https://www.govinfo.gov/app/collection/comps/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Statute Compilation
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="statute-compilation-link-subtitle-0"
      />
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 3 with dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="us-code-annual-link-link"
            href="https://www.govinfo.gov/app/collection/uscode"
            rel="noopener noreferrer"
            target="_blank"
          >
            US Code Annual
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="us-code-annual-link-subtitle-0"
        >
          effective Aug 2023
        </div>
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="us-code-annual-link-link"
          href="https://www.govinfo.gov/app/collection/uscode"
          rel="noopener noreferrer"
          target="_blank"
        >
          US Code Annual
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="us-code-annual-link-subtitle-0"
      >
        effective Aug 2023
      </div>
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 3 without dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="us-code-annual-link-link"
            href="https://www.govinfo.gov/app/collection/uscode"
            rel="noopener noreferrer"
            target="_blank"
          >
            US Code Annual
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="us-code-annual-link-subtitle-0"
        />
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="us-code-annual-link-link"
          href="https://www.govinfo.gov/app/collection/uscode"
          rel="noopener noreferrer"
          target="_blank"
        >
          US Code Annual
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="us-code-annual-link-subtitle-0"
      />
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 4 with dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="ssa-gov-link-link"
            href="https://www.ssa.gov/OP_Home/ssact/ssact.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            SSA.gov
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="ssa-gov-link-subtitle-0"
        >
          effective Aug 2023
        </div>
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="ssa-gov-link-link"
          href="https://www.ssa.gov/OP_Home/ssact/ssact.htm"
          rel="noopener noreferrer"
          target="_blank"
        >
          SSA.gov
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="ssa-gov-link-subtitle-0"
      >
        effective Aug 2023
      </div>
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 4 without dates 1`] = `
{
  "baseElement": <body>
    <div>
      <th
        class="row__cell row__cell--header row__cell--secondary"
      >
        <div
          class="cell__title"
        >
          <a
            class="external"
            data-testid="ssa-gov-link-link"
            href="https://www.ssa.gov/OP_Home/ssact/ssact.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            SSA.gov
          </a>
        </div>
        
        <div
          class="cell__subtitle"
          data-testid="ssa-gov-link-subtitle-0"
        />
        
      </th>
    </div>
  </body>,
  "container": <div>
    <th
      class="row__cell row__cell--header row__cell--secondary"
    >
      <div
        class="cell__title"
      >
        <a
          class="external"
          data-testid="ssa-gov-link-link"
          href="https://www.ssa.gov/OP_Home/ssact/ssact.htm"
          rel="noopener noreferrer"
          target="_blank"
        >
          SSA.gov
        </a>
      </div>
      
      <div
        class="cell__subtitle"
        data-testid="ssa-gov-link-subtitle-0"
      />
      
    </th>
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
